--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "http": "^0.0.1-security",
     "mongoose": "^6.6.1",
     "multer": "^1.4.5-lts.1"
   }
