--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,10 @@
     "file-saver": "^2.0.5",
     "react": "^18.2.0",
     "react-async": "^10.0.1",
+    "react-color": "^2.19.3",
+    "react-cropper": "^2.1.8",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^4.6.0",
     "react-image-crop": "^10.0.7",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
