--- a/client/package.json
+++ b/client/package.json
@@ -15,9 +15,10 @@
     "react-color": "^2.19.3",
     "react-cropper": "^2.1.8",
     "react-dom": "^18.2.0",
-    "react-easy-crop": "^4.6.0",
+    "react-easy-crop": "^4.7.4",
     "react-image-crop": "^10.0.7",
     "react-scripts": "^5.0.1",
+    "tinycolor2": "^1.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
